fixed video play button, header. Some responsive

--- a/style/_variables.scss
+++ b/style/_variables.scss
@@ -11,3 +11,9 @@ $light-gray: #f5efef;
 $pink: #f07f84;
 $blue: #79dad6;
 $beige: #f6b895;
+
+
+//breakpoints
+
+$break-large: 900px;
+$break-small: 550px;
