--- a/style/_mixin.scss
+++ b/style/_mixin.scss
@@ -9,7 +9,8 @@
 @mixin btn--large($bgcolor, $textcolor) {
     background: $bgcolor;
     color: $textcolor;
-    padding: 1rem 2rem;
+    padding: 1.5rem 3rem;
+    font-size: 1.6rem;
 }
 
 @mixin flexCenter($dir) {
