--- a/style/_typography.scss
+++ b/style/_typography.scss
@@ -17,7 +17,6 @@ html {
 h1, h2, h3, h4, h5, h6, p, a, ul, li, blockquote {
     margin: 0;
     padding: 0;
-
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -46,6 +45,7 @@ li {
     &heroMain {
         @include setFont(6rem, #000, 500);
         text-align: center;
+        margin-bottom: 60px;
     }
 
     &heroSecondary {
@@ -58,6 +58,10 @@ li {
         margin: 20px 0;
         text-align: center;
         padding-bottom: 30px;
+    }
+
+    &secondary {
+        @include setFont(1.8rem, $blue, 400);
     }
 
     &categories {
@@ -73,6 +77,8 @@ li {
         @include setFont(2.4rem, #000, 500);
         margin-bottom: 30px;
     }
+
+
 
 }
 
@@ -100,8 +106,14 @@ li {
     }
 
     &bold {
-        font-weight: 500;
+        font-weight: 700;
         color: black;
+    }
+
+    &strikeThrough {
+        @include setFont(1.4rem, $text-gray, 400);
+        text-decoration: line-through;
+        padding-left: 12px;
     }
 }
 
@@ -111,7 +123,12 @@ li {
     @include setFont(1.4rem, #000, 400);
     padding: 0.3rem 0;
 
+    &:hover {
+        border-bottom: 1px solid #000;
+    }
+
     &--sectionNav {
+        font-size: 1.8rem;
         padding: 0.5rem 0;
         margin: 0 3rem;
         display: inline-block;
@@ -126,6 +143,18 @@ li {
     &--footer {
         color: $text-gray;
         display: inline-block;
+
+        &:hover {
+            font-weight: 500;
+            border: none;
+        }
+    }
+
+    &--mainNav {
+        padding: 5px;
+        text-transform: uppercase;
+        font-weight: 700;
+        margin-right: 10px;
     }
 
 }
@@ -155,9 +184,10 @@ blockquote {
 
 .display-- {
     &graphic {
-        @include setFont(8rem, #fff, 400);
+        @include setFont(6vw, #fff, 400);
         font-family: "PressStyle", sans-serif;
         text-transform: uppercase;
+        // display: inline;
     }
 
     &small {
@@ -196,3 +226,13 @@ blockquote {
         margin-top: 10px; //some space between line and text
     }
 }
+
+// .hover--overlayImage:hover img, .hover--overlayImage:focus img {
+//     background:linear-gradient(rgba(#000,0.5),rgba(#000,0.5));
+// }
+
+// .hover--overlayImage {
+//     background: red;
+//     z-index: 1;
+// }
+
