--- a/style/style.css
+++ b/style/style.css
@@ -239,15 +239,20 @@ li {
   font-size: 1.4rem;
   color: #000;
   font-weight: 400;
+  border-bottom: 1px solid transparent;
   padding: 0.3rem 0; }
   .link:hover {
-    border-bottom: 1px solid #000; }
+    border-bottom: 1px solid #000;
+    color: #f07f84; }
   .link--sectionNav {
     font-size: 1.8rem;
     padding: 0.5rem 0;
     margin: 0 3rem;
     display: inline-block;
     border-bottom: 1px solid transparent; }
+    @media (max-width: 700px) {
+      .link--sectionNav {
+        margin: 0 1rem; } }
     .link--sectionNav:hover, .link--sectionNav:focus {
       color: #f07f84;
       border-bottom: 1px solid #000; }
@@ -292,6 +297,9 @@ blockquote {
   font-weight: 400;
   font-family: "PressStyle", sans-serif;
   text-transform: uppercase; }
+  @media (max-width: 1000px) {
+    .display--graphic {
+      font-size: 10vw; } }
 
 .display--small {
   font-size: 1.6rem;
@@ -319,6 +327,44 @@ blockquote {
   background: #79dad6;
   margin-top: 10px; }
 
+button, input[type="submit"] {
+  border: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  text-transform: uppercase; }
+
+.btn__cta {
+  background: #f07f84;
+  color: #fff;
+  padding: 1.5rem 3rem;
+  font-size: 1.6rem;
+  -webkit-transition: 0.5s background ease-in-out;
+  -o-transition: 0.5s background ease-in-out;
+  transition: 0.5s background ease-in-out; }
+  .btn__cta:hover, .btn__cta:focus {
+    background: #f5adb0; }
+
+.btn__cart {
+  background: #fff;
+  color: #000;
+  padding: 0.8rem;
+  -webkit-transition: 0.5s background;
+  -o-transition: 0.5s background;
+  transition: 0.5s background; }
+  .btn__cart:hover, .btn__cart:focus {
+    background: #79dad6; }
+  @media (max-width: 700px) {
+    .btn__cart {
+      background: #fff;
+      color: #000;
+      padding: 1.5rem 3rem;
+      font-size: 1.6rem;
+      -webkit-transition: 0.5s background ease-in-out;
+      -o-transition: 0.5s background ease-in-out;
+      transition: 0.5s background ease-in-out; }
+      .btn__cart:hover, .btn__cart:focus {
+        background: white; } }
+
 header {
   display: -webkit-box;
   display: -webkit-flex;
@@ -331,7 +377,7 @@ header {
   -webkit-flex-wrap: nowrap;
   -ms-flex-wrap: nowrap;
   flex-wrap: nowrap; }
-  @media (max-width: 900px) {
+  @media (max-width: 1000px) {
     header {
       -webkit-flex-wrap: wrap;
       -ms-flex-wrap: wrap;
@@ -367,7 +413,7 @@ header div:first-of-type {
   -webkit-justify-content: flex-start;
   -ms-flex-pack: start;
   justify-content: flex-start; }
-  @media (max-width: 900px) {
+  @media (max-width: 1000px) {
     header div:first-of-type {
       width: 100%;
       -webkit-box-pack: center;
@@ -379,7 +425,7 @@ header div:first-of-type {
       -ms-flex-order: 3;
       order: 3; } }
 
-@media (max-width: 900px) {
+@media (max-width: 1000px) {
   header div:nth-of-type(2) {
     width: 50%;
     display: inline; } }
@@ -389,7 +435,7 @@ header div:last-of-type {
   -webkit-justify-content: flex-end;
   -ms-flex-pack: end;
   justify-content: flex-end; }
-  @media (max-width: 900px) {
+  @media (max-width: 1000px) {
     header div:last-of-type {
       width: 50%;
       display: inline; } }
@@ -420,7 +466,7 @@ footer {
   grid-template-columns: repeat(12, 1fr);
   grid-gap: 30px;
   grid-template-areas: "address address address address address services services account account insta insta insta"; }
-  @media (max-width: 900px) {
+  @media (max-width: 1000px) {
     footer {
       grid-gap: 10px;
       grid-template-columns: repeat(4, 1fr);
@@ -457,9 +503,9 @@ footer > div {
   width: 80%;
   max-width: 1150px;
   margin: 0 auto; }
-  @media (max-width: 900px) {
+  @media (max-width: 1000px) {
     .wrapper {
-      width: 90%; } }
+      width: 95%; } }
 
 .visuallyHidden {
   border: 0;
@@ -477,9 +523,9 @@ section {
 .wrap--small {
   width: 70%;
   margin: 0 auto 40px; }
-  @media (max-width: 900px) {
+  @media (max-width: 700px) {
     .wrap--small {
-      width: 100%; } }
+      width: 95%; } }
 
 img {
   width: 100%; }
@@ -604,11 +650,6 @@ img {
   flex-direction: column;
   text-align: center; }
 
-.btn__cart {
-  background: #fff;
-  color: #000;
-  padding: 0.8rem; }
-
 .wrap--overlayText {
   padding: 1rem 2rem;
   background: #fff; }
@@ -663,11 +704,11 @@ img {
   -ms-flex-pack: stretch;
   justify-content: stretch;
   grid-template-areas: "airPlants officePlants housePlants" "airPlants plantContainers plantContainers"; }
-  @media (max-width: 900px) {
+  @media (max-width: 1000px) {
     .layout__categories {
       grid-template-columns: 1fr 1fr 1fr;
       grid-gap: 15px; } }
-  @media (max-width: 550px) {
+  @media (max-width: 700px) {
     .layout__categories {
       grid-gap: 15px;
       grid-template-columns: 1fr 1fr;
@@ -693,35 +734,36 @@ img {
   -webkit-flex-direction: row;
   -ms-flex-direction: row;
   flex-direction: row;
-  text-align: center;
-  -webkit-transition: 0.5s all;
-  -o-transition: 0.5s all;
-  transition: 0.5s all; }
+  text-align: center; }
   .categoryCard:nth-of-type(1) {
     grid-area: airPlants;
-    background: url("../assets/airPlants.jpg") no-repeat;
+    background: -webkit-gradient(linear, left top, left bottom, from(transparent), to(transparent)), url("../assets/airPlants.jpg") no-repeat center;
+    background: -webkit-linear-gradient(transparent, transparent), url("../assets/airPlants.jpg") no-repeat center;
+    background: -o-linear-gradient(transparent, transparent), url("../assets/airPlants.jpg") no-repeat center;
+    background: linear-gradient(transparent, transparent), url("../assets/airPlants.jpg") no-repeat center;
     background-size: cover; }
     .categoryCard:nth-of-type(1):hover {
-      background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.2)), to(rgba(0, 0, 0, 0.2))), url("../assets/airPlants.jpg") no-repeat;
-      background: -webkit-linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../assets/airPlants.jpg") no-repeat;
-      background: -o-linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../assets/airPlants.jpg") no-repeat;
-      background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../assets/airPlants.jpg") no-repeat; }
+      background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url("../assets/airPlants.jpg") no-repeat center;
+      background: -webkit-linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../assets/airPlants.jpg") no-repeat center;
+      background: -o-linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../assets/airPlants.jpg") no-repeat center;
+      background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../assets/airPlants.jpg") no-repeat center;
+      background-size: cover; }
   .categoryCard:nth-of-type(2) {
     grid-area: officePlants;
-    background: url("../assets/officePlants.jpg") no-repeat; }
+    background: url("../assets/officePlants.jpg") no-repeat center; }
     .categoryCard:nth-of-type(2):hover {
-      background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.2)), to(rgba(0, 0, 0, 0.2))), url("../assets/officePlants.jpg") no-repeat;
-      background: -webkit-linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../assets/officePlants.jpg") no-repeat;
-      background: -o-linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../assets/officePlants.jpg") no-repeat;
-      background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../assets/officePlants.jpg") no-repeat; }
+      background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.2)), to(rgba(0, 0, 0, 0.2))), url("../assets/officePlants.jpg") no-repeat center;
+      background: -webkit-linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../assets/officePlants.jpg") no-repeat center;
+      background: -o-linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../assets/officePlants.jpg") no-repeat center;
+      background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../assets/officePlants.jpg") no-repeat center; }
   .categoryCard:nth-of-type(3) {
     grid-area: housePlants;
-    background: url("../assets/housePlants.jpg") no-repeat; }
+    background: url("../assets/housePlants.jpg") no-repeat center; }
     .categoryCard:nth-of-type(3):hover {
-      background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.2)), to(rgba(0, 0, 0, 0.2))), url("../assets/housePlants.jpg") no-repeat;
-      background: -webkit-linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../assets/housePlants.jpg") no-repeat;
-      background: -o-linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../assets/housePlants.jpg") no-repeat;
-      background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../assets/housePlants.jpg") no-repeat; }
+      background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.2)), to(rgba(0, 0, 0, 0.2))), url("../assets/housePlants.jpg") no-repeat center;
+      background: -webkit-linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../assets/housePlants.jpg") no-repeat center;
+      background: -o-linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../assets/housePlants.jpg") no-repeat center;
+      background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../assets/housePlants.jpg") no-repeat center; }
   .categoryCard:nth-of-type(4) {
     grid-area: plantContainers;
     background: url("../assets/plantContainers.jpg") no-repeat center; }
@@ -739,11 +781,8 @@ img {
   right: 5px;
   display: block; }
 
-.badge1 {
+.badge:nth-of-type(2) {
   top: 5px; }
-
-.badge2 {
-  top: 30px; }
 
 /*----------------------------------------
     Section - Popular Products
@@ -849,7 +888,7 @@ img {
   flex-direction: column;
   text-align: center;
   min-width: 450px; }
-  @media (max-width: 900px) {
+  @media (max-width: 1000px) {
     .layout__2col > div {
       width: 100%;
       min-width: initial; } }
@@ -877,11 +916,11 @@ img {
     background: #f07f84; }
 
 .testimonials__video {
-  background-size: cover;
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.4)), to(rgba(0, 0, 0, 0.4))), url("../assets/bg-video.jpg") no-repeat;
   background: -webkit-linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../assets/bg-video.jpg") no-repeat;
   background: -o-linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../assets/bg-video.jpg") no-repeat;
-  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../assets/bg-video.jpg") no-repeat; }
+  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../assets/bg-video.jpg") no-repeat;
+  background-size: cover; }
 
 .testimonials__quote .heading--section {
   position: relative;
@@ -946,7 +985,12 @@ span.display--graphic::before {
   width: 100%; }
   .imgFit img {
     -o-object-fit: fill;
-    object-fit: fill; }
+    object-fit: fill;
+    -webkit-transition: 0.5s opacity;
+    -o-transition: 0.5s opacity;
+    transition: 0.5s opacity; }
+  .imgFit:hover img {
+    opacity: 0.6; }
 
 .layout__3col {
   display: -webkit-box;
@@ -966,7 +1010,7 @@ span.display--graphic::before {
 .layout__3col > div {
   width: calc(33% - (60px / 3));
   margin: 10px 30px 10px 0; }
-  @media (max-width: 900px) {
+  @media (max-width: 1000px) {
     .layout__3col > div {
       margin-right: 10px; } }
   @media (max-width: 550px) {
@@ -1046,6 +1090,9 @@ span.display--graphic::before {
   width: auto;
   margin: 20px; }
 
+.graphics--logo {
+  margin: 20px 0; }
+
 .layout__floatRow > * {
   float: left;
   margin-right: 10px; }
@@ -1057,15 +1104,3 @@ span.display--graphic::before {
   color: #000;
   font-weight: 400;
   padding: 1rem; }
-
-button, input[type="submit"] {
-  border: none;
-  -webkit-box-shadow: none;
-  box-shadow: none;
-  text-transform: uppercase; }
-
-.btn__cta {
-  background: #f07f84;
-  color: #fff;
-  padding: 1.5rem 3rem;
-  font-size: 1.6rem; }
