--- a/style/components/_header.scss
+++ b/style/components/_header.scss
@@ -4,12 +4,15 @@
 header {
     display: flex;
     justify-content: space-between;
+    overflow: hidden;
     // margin: 100px 0;
     
     flex-wrap: nowrap;
+    position: relative;
     @media (max-width: $break-large) {
     flex-wrap: wrap;
     }
+    
 
 }
 
@@ -73,4 +76,40 @@ header div:last-of-type {
     p {
         font-size: 11px;
     }
+}
+
+
+// make search bar slide out
+#toggle {
+
+    display: none;
+}
+
+label[for="toggle"] img {
+    content: url("../../assets/icon-search.png");
+    width: 24px;
+    height: 24px;
+    display: inline-block;
+}
+
+form.search {
+    border: 1px cyan solid;
+    position: absolute;
+	right: -100%;
+	top: 60px;
+	list-style: none;
+	width: 30%;
+	margin: 0;
+	padding: 0;
+	z-index: 50;
+	transition: all 1s;
+}
+
+#searchField {
+    width: 80%;
+}
+
+// side out when toggled
+input:checked + form {
+	right: 0;
 }
